// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary with expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    £123,344,625,645,635.63
  </h1>
</div>
`;

exports[`should render expense summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    £12.33
  </h1>
</div>
`;
